--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,4 +10,20 @@
 <body>
   <app-root></app-root>
 </body>
+<style>
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: dimgrey;
+}
+</style>
 </html>
